set(Python_ADDITIONAL_VERSIONS 3.2mu)
find_package(PythonLibs 3.2 REQUIRED)
set(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_GLOBAL_FLAGS})
set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_INCLUDE_PATH})
set_source_files_properties(formast.i PROPERTIES CPLUSPLUS ON)
swig_add_module(formast python formast.i)
swig_link_libraries(formast formast-lib ${PYTHON_LIBRARIES})
set(FORMAST_PYTHON_MODULE_DIR "${FORMAST_BINARY_DIR}/python" )
#get_target_property(FORMAST_BINARY_MODULE ${SWIG_MODULE_formast_TARGET_NAME} LOCATION)
